Accès générique aux données - Ajout d'un fichier de configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,18 @@
 {
     "cSpell.words": [
         "get",
-        "parametre"
+        "parametre",
+        "parametres",
+        "resultat"
+    ],
+    "cSpell.ignoreWords": [
+        "beekast",
+        "cpam",
+        "excel",
+        "executer",
+        "finder",
+        "requete",
+        "spotlight",
+        "torvalds"
     ]
 }
