Passage en Framework

--- a/Config/dev.ini
+++ b/Config/dev.ini
@@ -1,5 +1,6 @@
 ; Configuration pour le développement
-
+[Installation]
+racineWeb = /
 [BD]
 dsn = 'mysql:host=localhost;dbname=php-mvc;charset=utf8'
 login = 'root'
