--- a/Config/dev.ini
+++ b/Config/dev.ini
@@ -2,6 +2,6 @@
 [Installation]
 racineWeb = /
 [BD]
-dsn = 'mysql:host=localhost;dbname=php-mvc;charset=utf8'
+dsn = 'mysql:host=localhost;dbname=p4;charset=utf8'
 login = 'root'
 pass = 'root'
