Passage en anglais

--- a/Setup/dev.ini
+++ b/Setup/dev.ini
@@ -1,6 +1,6 @@
 ; Configuration pour le développement
 [Installation]
-racineWeb = /
+rootWeb = /
 [BD]
 dsn = 'mysql:host=localhost;dbname=p4;charset=utf8'
 login = 'root'
